More styling work

--- a/static/extra.css
+++ b/static/extra.css
@@ -2,3 +2,14 @@
         opacity: 1
 }
 
+.text-orange {
+	color: #ED7109
+}
+
+.bg-orange {
+	background-color: #ED7109
+}
+
+.border-orange {
+	border-color: #ED7109
+}
